--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,39 @@
   background-color: rgb(2, 9, 48);
   color: aliceblue;
 }
+#root{
+  background-color: rgb(2, 10, 32);
+  color: aliceblue;
+}
+tr td{
+  color: aliceblue;
+}
+.dashboard{
+  background-color: aliceblue;
+}
 
+.play-button {
+  position: absolute;
+  top: 35%;
+  left: 45%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  display: none; /* Ẩn nút ban đầu */
+  transform: scale(1.2); /* Tăng kích thước của nút lên 120% khi hover */
+  transition: transform 0.3s; 
+}
 
+.card:hover .play-button {
+  display: block; /* Hiện nút khi hover vào thẻ card */
+  transform: scale(1.5); 
+}
+
+.card:hover img {
+  filter: brightness(0.5); /* Làm mờ ảnh khi hover */
+}
 
